After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677168 - Image Gallery not displayed correctly with GTK+-3.4.3
Image Gallery not displayed correctly with GTK+-3.4.3
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: collection
3.4.x
Other Linux
: Normal critical
: GNOME3.6
Assigned To: EOG Maintainers
EOG Maintainers
: 679970 680308 (view as bug list)
Depends on: 677809
Blocks:
 
 
Reported: 2012-05-31 09:03 UTC by Volker Sobek (weld)
Modified: 2012-07-22 09:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot, notice the empty gallery at the bottom (35.86 KB, image/png)
2012-05-31 09:04 UTC, Volker Sobek (weld)
Details

Description Volker Sobek (weld) 2012-05-31 09:03:51 UTC
I think this is likely no eog issue, as eog wasn't updated recently, but I file it here for a start. The last update that could be related that I see is gtk3.

Happens with an updated F17 install. See attached screenshot. 

$ rpm -q eog gtk3
eog-3.4.1-2.fc17.x86_64
gtk3-3.4.3-2.fc17.x86_64

Also happens with eog from jhbuild building 3.6 on F17.
Comment 1 Volker Sobek (weld) 2012-05-31 09:04:44 UTC
Created attachment 215308 [details]
Screenshot, notice the empty gallery at the bottom
Comment 2 Volker Sobek (weld) 2012-05-31 09:56:01 UTC
I do see images with

 $ gsettings set org.gnome.eog.ui image-gallery-resizable true

or when using

 $ gsettings set org.gnome.eog.ui image-gallery-position left

So there's rather something wrong with GtkIconView.
Comment 3 Volker Sobek (weld) 2012-05-31 16:21:26 UTC
This also crashes eog when you start it with the gallery enabled and view an image that is in a directory with a total 2 or 3 images.


  • #0 gtk_distribute_natural_allocation
    at gtksizerequest.c line 776
  • #1 gtk_icon_view_layout
    at gtkiconview.c line 2928
  • #2 gtk_icon_view_size_allocate
    at gtkiconview.c line 1746
  • #3 g_closure_invoke
    at gclosure.c line 777
  • #4 signal_emit_unlocked_R
    at gsignal.c line 3477
  • #5 g_signal_emit_valist
    at gsignal.c line 3296
  • #6 g_signal_emit
    at gsignal.c line 3352
  • #7 gtk_widget_size_allocate
    at gtkwidget.c line 4992
  • #8 gtk_scrolled_window_allocate_child
    at gtkscrolledwindow.c line 1936
  • #9 gtk_scrolled_window_size_allocate
  • #10 g_closure_invoke
    at gclosure.c line 777
  • #11 signal_emit_unlocked_R
    at gsignal.c line 3477
  • #12 g_signal_emit_valist
    at gsignal.c line 3296
  • #13 g_signal_emit
    at gsignal.c line 3352
  • #14 gtk_widget_size_allocate
  • #15 gtk_box_size_allocate
    at gtkbox.c line 660
  • #16 g_cclosure_marshal_VOID__BOXEDv
    at gmarshal.c line 1160
  • #17 _g_closure_invoke_va
  • #18 g_signal_emit_valist
    at gsignal.c line 3207
  • #19 g_signal_emit
    at gsignal.c line 3352
  • #20 gtk_widget_size_allocate
  • #21 gtk_box_size_allocate
    at gtkbox.c line 660
  • #22 g_cclosure_marshal_VOID__BOXEDv
    at gmarshal.c line 1160
  • #23 _g_closure_invoke_va
  • #24 g_signal_emit_valist
    at gsignal.c line 3207
  • #25 g_signal_emit
    at gsignal.c line 3352
  • #26 gtk_widget_size_allocate
    at gtkwidget.c line 4992
  • #27 gtk_box_size_allocate
    at gtkbox.c line 660
  • #28 g_cclosure_marshal_VOID__BOXEDv
    at gmarshal.c line 1160
  • #29 _g_closure_invoke_va
  • #30 g_signal_emit_valist
    at gsignal.c line 3207
  • #31 g_signal_emit
    at gsignal.c line 3352
  • #32 gtk_widget_size_allocate
    at gtkwidget.c line 4992
  • #33 gtk_box_size_allocate
    at gtkbox.c line 660
  • #34 g_cclosure_marshal_VOID__BOXEDv
    at gmarshal.c line 1160
  • #35 _g_closure_invoke_va
  • #36 g_signal_emit_valist
    at gsignal.c line 3207
  • #37 g_signal_emit
    at gsignal.c line 3352
  • #38 gtk_widget_size_allocate
    at gtkwidget.c line 4992
  • #39 gtk_window_size_allocate
    at gtkwindow.c line 5591
  • #40 g_cclosure_marshal_VOID__BOXEDv
  • #41 _g_closure_invoke_va
    at gclosure.c line 840
  • #42 g_signal_emit_valist
    at gsignal.c line 3207
  • #43 g_signal_emit
    at gsignal.c line 3352
  • #44 gtk_widget_size_allocate
    at gtkwidget.c line 4992
  • #45 gtk_window_realize
    at gtkwindow.c line 5213
  • #46 g_closure_invoke
    at gclosure.c line 777
  • #47 signal_emit_unlocked_R
    at gsignal.c line 3477
  • #48 g_signal_emit_valist
    at gsignal.c line 3296
  • #49 g_signal_emit
    at gsignal.c line 3352
  • #50 gtk_widget_realize
    at gtkwidget.c line 4507
  • #51 gtk_widget_realize
    at gtkwidget.c line 4500
  • #52 gtk_widget_realize
    at gtkwidget.c line 4500
  • #53 gtk_widget_realize
    at gtkwidget.c line 4500
  • #54 gtk_widget_realize
    at gtkwidget.c line 4500
  • #55 gtk_widget_realize
    at gtkwidget.c line 4500
  • #56 eog_window_obtain_desired_size
    at eog-window.c line 1210
  • #57 g_closure_invoke
    at gclosure.c line 777
  • #58 signal_emit_unlocked_R
    at gsignal.c line 3547
  • #59 g_signal_emit_valist
    at gsignal.c line 3296
  • #60 g_signal_emit
    at gsignal.c line 3352
  • #61 do_emit_size_prepared_signal
    at eog-image.c line 491
  • #62 gdk_threads_dispatch
    at gdk.c line 763
  • #63 g_main_dispatch
    at gmain.c line 2515
  • #64 g_main_context_dispatch
    at gmain.c line 3052
  • #65 g_main_context_iterate
  • #66 g_main_context_iteration
    at gmain.c line 3184
  • #67 g_application_run
    at gapplication.c line 1496
  • #68 main
    at main.c line 190

Comment 4 Felix Riemann 2012-06-15 20:41:10 UTC
This is a regression of GTK-3.4.3, a fix seems pretty close. Check bug 677809.

We nonetheless have to fix eog to work with the new code though. Using this bug to track that.
Comment 5 Matthias Clasen 2012-06-16 01:33:04 UTC
It would be great if you could test if the iconview fixes on master fix this problem (they will also be on gtk-3-4 soon).
Comment 6 Felix Riemann 2012-06-16 10:14:09 UTC
(In reply to comment #5)
> It would be great if you could test if the iconview fixes on master fix this
> problem (they will also be on gtk-3-4 soon).

The changes on master make it work again so far that only eog needs to be adjusted to request only the required number of columns (= number of pictures) and not G_MAXINT columns from the icon view. See also bug 677809 comment 27 and 28.
Comment 7 Matthias Clasen 2012-06-19 23:10:29 UTC
Thanks for the testing
Comment 8 Felix Riemann 2012-06-23 15:53:06 UTC
Alright, this works with gtk+-3.4.2, upcoming 3.4.4 and master. gtk+-3.4.3 scales items incorrectly. I'll probably pack this into another stable release soon if nothing bad shows up.

commit 888b5ed2f6d0fa89d52fad68ddcf14fbca134932
Author: Felix Riemann <>
Date:   Sat Jun 23 17:12:54 2012 +0200

    EogThumbView: Set icon view columns to the real number of images
    
    GtkIconView's layout code was redone in gtk+-3.4.3 and 3.4.4
    breaking EogThumbView which would scale the thumbnails so small that
    the thumbview would not be shown itself in single row mode.
    This should work with gtk+-3.4.2 and earlier as well.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=677168
---
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.
Comment 9 Felix Riemann 2012-07-15 20:27:02 UTC
*** Bug 679970 has been marked as a duplicate of this bug. ***
Comment 10 Felix Riemann 2012-07-22 09:34:13 UTC
*** Bug 680308 has been marked as a duplicate of this bug. ***