EogThumbView: Set icon view columns to the real number of images

GtkIconView's layout code was redone in gtk+-3.4.3 and 3.4.4
breaking EogThumbView which would scale the thumbnails so small that
the thumbview would not be shown itself in single row mode.
This should work with gtk+-3.4.2 and earlier as well.

https://bugzilla.gnome.org/show_bug.cgi?id=677168